err/cozy-indexer.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Whoosh-2.7.4.dist-info'...
Listing './lib/python3.5/site-packages/cozy_indexer-1.0.6.egg-info'...
Listing './lib/python3.5/site-packages/cozyindexer'...
Listing './lib/python3.5/site-packages/cozyindexer/handlers'...
Listing './lib/python3.5/site-packages/cozyindexer/lib'...
Compiling './lib/python3.5/site-packages/cozyindexer/server.py'...
***   File "./lib/python3.5/site-packages/cozyindexer/server.py", line 34
    print ""
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './lib/python3.5/site-packages/whoosh'...
Listing './lib/python3.5/site-packages/whoosh/analysis'...
Listing './lib/python3.5/site-packages/whoosh/automata'...
Listing './lib/python3.5/site-packages/whoosh/codec'...
Listing './lib/python3.5/site-packages/whoosh/filedb'...
Listing './lib/python3.5/site-packages/whoosh/lang'...
Listing './lib/python3.5/site-packages/whoosh/lang/snowball'...
Listing './lib/python3.5/site-packages/whoosh/matching'...
Listing './lib/python3.5/site-packages/whoosh/qparser'...
Listing './lib/python3.5/site-packages/whoosh/query'...
Listing './lib/python3.5/site-packages/whoosh/support'...
Listing './lib/python3.5/site-packages/whoosh/util'...
Listing './share'...
Listing './share/python-wheels'...
